--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ssb-app",
   "version": "0.1.0",
-  "homepage": "https://hpere102.github.io/super-smash-bros-db",
+  "homepage": "https://hpere102.github.io/super-smash-bros-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
